sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Recipe_Item__c/Inventory_Item_Recipe_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Item Recipe Item</label>
    <nameField>
        <displayFormat>RECIPE-ITM-{0000}</displayFormat>
        <label>Inventory Item Recipe Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Item Recipe Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>