sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Recipe_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Item Recipe Items</relationshipLabel>
    <relationshipName>Inventory_Item_Recipe_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>