sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Recipe_Item__c/fields/Inventory_Item_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Recipe__c</fullName>
    <label>Inventory Item Recipe</label>
    <referenceTo>Inventory_Item_Recipe__c</referenceTo>
    <relationshipLabel>Inventory Item Recipe Items</relationshipLabel>
    <relationshipName>Inventory_Item_Recipe_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>