sfSandBoxCode/force-app/main/default/objects/Inventory_Item_Recipe_Item__c/fields/Quantity_Per__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Per__c</fullName>
    <label>Quantity Per</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>